create latex paper from sections

--- a/scientistgpt/latex/templates/standard_paper.tex
+++ b/scientistgpt/latex/templates/standard_paper.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
+\usepackage{cite}
 
 @@@title@@@
 \author{ScientistGPT}
