Need to fix latex tests, extract_text_between_tags had some updates

--- a/scientistgpt/gpt_interactors/paper_writing/templates/standard_paper_with_citations.tex
+++ b/scientistgpt/gpt_interactors/paper_writing/templates/standard_paper_with_citations.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
+\usepackage{cite}
 
 @@@title@@@
 \author{ScientistGPT}
@@ -21,5 +22,7 @@
 
 @@@conclusion@@@
 
+\bibliographystyle{apalike}
+\bibliography{citations}
 
 \end{document}
