Hotfix - do not escape already escaped, also escape bibtex all test pass

--- a/scientistgpt/gpt_interactors/paper_writing/templates/standard_paper.tex
+++ b/scientistgpt/gpt_interactors/paper_writing/templates/standard_paper.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
+\usepackage{amsmath}
 
 @@@title@@@
 \author{ScientistGPT}
