minor changes to latex template

--- a/scientistgpt/gpt_interactors/step_by_step/latex_paper_compilation/templates/standard_paper.tex
+++ b/scientistgpt/gpt_interactors/step_by_step/latex_paper_compilation/templates/standard_paper.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{threeparttable}
 
 @@@title@@@
 \author{ScientistGPT}
