--- a/scientistgpt/gpt_interactors/step_by_step/latex_paper_compilation/templates/standard_paper_with_citations.tex
+++ b/scientistgpt/gpt_interactors/step_by_step/latex_paper_compilation/templates/standard_paper_with_citations.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{threeparttable}
 
 @@@title@@@
 \author{ScientistGPT}
