added listings package and settings to format appednix

--- a/g3pt/projects/scientific_research/templates/standard_paper.tex
+++ b/g3pt/projects/scientific_research/templates/standard_paper.tex
@@ -7,6 +7,15 @@
 \usepackage{threeparttable}
 \usepackage{fancyvrb}
 \usepackage{color}
+\usepackage{listings}
+\lstset{
+    basicstyle=\ttfamily\scriptsize,
+    columns=fullflexible,
+    frame=single,
+    breaklines=true,
+    postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
+    tabsize=2
+}
 
 @@@title@@@
 \author{ScientistGPT}
