update latex lstlisting style

--- a/g3pt/projects/scientific_research/templates/standard_paper.tex
+++ b/g3pt/projects/scientific_research/templates/standard_paper.tex
@@ -9,11 +9,10 @@
 \usepackage{color}
 \usepackage{listings}
 \lstset{
-    basicstyle=\ttfamily\scriptsize,
+    basicstyle=\ttfamily\footnotesize,
     columns=fullflexible,
-    frame=single,
     breaklines=true,
-    postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
+    postbreak=\mbox{\textcolor{black}{$\hookrightarrow$}\space},
     tabsize=2
 }
 
