fix paper template structure to match relevant journal

--- a/scientistgpt/scientistgpt/projects/scientific_research/templates/standard_paper.tex
+++ b/scientistgpt/scientistgpt/projects/scientific_research/templates/standard_paper.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage{amsmath}
@@ -12,12 +12,11 @@
     basicstyle=\ttfamily\footnotesize,
     columns=fullflexible,
     breaklines=true,
-    postbreak=\mbox{\textcolor{black}{$\hookrightarrow$}\space},
     tabsize=2
 }
 
 @@@title@@@
-\author{ScientistGPT}
+\author{data2paper}
 
 \begin{document}
 
@@ -27,10 +26,10 @@
 
 @@@introduction@@@
 
-@@@methods@@@
-
 @@@results@@@
 
 @@@discussion@@@
+
+@@@methods@@@
 
 \end{document}
