remove numbering from paper, fix section fontsize

--- a/scientistgpt/scientistgpt/projects/scientific_research/templates/standard_paper.tex
+++ b/scientistgpt/scientistgpt/projects/scientific_research/templates/standard_paper.tex
@@ -8,6 +8,9 @@
 \usepackage{fancyvrb}
 \usepackage{color}
 \usepackage{listings}
+\usepackage{sectsty}
+\sectionfont{\Large}
+\subsectionfont{\normalsize}
 \lstset{
     basicstyle=\ttfamily\footnotesize,
     columns=fullflexible,
@@ -16,7 +19,7 @@
 }
 
 @@@title@@@
-\author{data2paper}
+\author{Data2Paper}
 
 \begin{document}
 
