--- a/data_to_paper/examples/projects/diabetes/outputs/tweeter_5/introduction__introduction_0.tex
+++ b/data_to_paper/examples/projects/diabetes/outputs/tweeter_5/introduction__introduction_0.tex
@@ -29,7 +29,7 @@ Diabetes is a major global health concern, affecting nearly half a billion peopl
 
 Previous research has demonstrated the beneficial impact of fruit and vegetable consumption and regular physical activity on diabetes risk \cite{Li2016AssociationBA, Herbst2007ImpactOP}, focusing primarily on prevalent diabetes risk factors such as insulin resistance, obesity, and cardiovascular health. However, there is limited evidence on the combined effect of both fruit and vegetable consumption and physical activity on diabetes risk.
 
-In this study, we aim to fill this gap in the literature by examining the relationship between fruit and vegetable consumption, physical activity, and diabetes risk among adults using data from the CDC's Behavioral Risk Factor Surveillance System (BRFSS) 2015 survey \cite{Flores-Hernández2015QualityOD,Iachan2016NationalWO}. This dataset provides a large and diverse sample of American adults, allowing us to investigate the association of these modifiable lifestyle factors with the risk of developing diabetes.
+In this study, we aim to fill this gap in the literature by examining the relationship between fruit and vegetable consumption, physical activity, and diabetes risk among adults using data from the CDC's Behavioral Risk Factor Surveillance System (BRFSS) 2015 survey \cite{Flores-Hernndez2015QualityOD,Iachan2016NationalWO}. This dataset provides a large and diverse sample of American adults, allowing us to investigate the association of these modifiable lifestyle factors with the risk of developing diabetes.
 
 To assess the impact of fruit and vegetable consumption and physical activity on diabetes risk, we employed logistic regression analysis, controlling for potential confounding factors such as age, sex, BMI, education, and income \cite{Gomes-Neto2019FruitAV}. In addition to examining the independent effects of fruit and vegetable consumption and physical activity on diabetes risk, we also analyzed the interaction between these lifestyle factors to better understand their potential synergistic effect on diabetes risk reduction.
 
