--- a/data_to_paper/examples/projects/diabetes/outputs/tweeter_5/discussion__discussion.tex
+++ b/data_to_paper/examples/projects/diabetes/outputs/tweeter_5/discussion__discussion.tex
@@ -27,7 +27,7 @@
 
 The subject of this study focused on the association between fruit and vegetable consumption, physical activity, and the risk of diabetes among adults. Given the forecasted increase in diabetes prevalence, with estimates projecting a 25\% increase in 2030 and 51\% in 2045 \cite{Saeedi2019GlobalAR}, it is critical to identify modifiable risk factors like dietary habits and physical activity for the prevention and management of diabetes \cite{Uloko2018PrevalenceAR}. 
 
-In examining the association between fruit and vegetable consumption, physical activity, and diabetes risk, our methodology involved logistic regression analysis using data from the Behavioral Risk Factor Surveillance System (BRFSS) 2015 survey, controlling for potential confounding factors such as age, sex, BMI, education, and income. Our findings reveal that a higher intake of fruits and vegetables, coupled with regular physical activity, resulted in a reduced risk of diabetes. These results align with previous research that highlighted the benefits of fruit and vegetable consumption and physical activity on diabetes risk \cite{Herbst2007ImpactOP, Carlström2018CoffeeCA, Drouin-Chartier2016SystematicRO}.
+In examining the association between fruit and vegetable consumption, physical activity, and diabetes risk, our methodology involved logistic regression analysis using data from the Behavioral Risk Factor Surveillance System (BRFSS) 2015 survey, controlling for potential confounding factors such as age, sex, BMI, education, and income. Our findings reveal that a higher intake of fruits and vegetables, coupled with regular physical activity, resulted in a reduced risk of diabetes. These results align with previous research that highlighted the benefits of fruit and vegetable consumption and physical activity on diabetes risk \cite{Herbst2007ImpactOP, Carlstrm2018CoffeeCA, Drouin-Chartier2016SystematicRO}.
 
 However, our study has some limitations that should be taken into consideration. Our findings were based on self-reported data, which may be prone to errors and biases in measurement. Moreover, there is a possibility that unmeasured or residual confounding factors could have influenced the observed associations. Additionally, as this study utilized cross-sectional data, we caution against inferring any causal relationships between fruit and vegetable consumption, physical activity, and diabetes risk. 
 
