use minted package to allow line breaks

--- a/data_to_paper/data_to_paper/projects/scientific_research/templates/standard_paper.tex
+++ b/data_to_paper/data_to_paper/projects/scientific_research/templates/standard_paper.tex
@@ -8,6 +8,7 @@
 \usepackage{fancyvrb}
 \usepackage{color}
 \usepackage{listings}
+\usepackage{minted}
 \usepackage{sectsty}
 \sectionfont{\Large}
 \subsectionfont{\normalsize}
