--- a/data_to_paper/data_to_paper/projects/demo_project/templates/abstract_only.tex
+++ b/data_to_paper/data_to_paper/projects/demo_project/templates/abstract_only.tex
@@ -8,6 +8,7 @@
 \usepackage{fancyvrb}
 \usepackage{color}
 \usepackage{listings}
+\usepackage{minted}
 \usepackage{sectsty}
 \sectionfont{\Large}
 \subsectionfont{\normalsize}
