unify compilation_template.tex and standard_paper.tex

--- a/data_to_paper/data_to_paper/latex/templates/standard_paper.tex
+++ b/data_to_paper/data_to_paper/latex/templates/standard_paper.tex
@@ -25,14 +25,6 @@
 
 \maketitle
 
-@@@abstract@@@
-
-@@@introduction@@@
-
-@@@results@@@
-
-@@@discussion@@@
-
-@@@methods@@@
+@@@content@@@
 
 \end{document}
