create full papers
xx

--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_3/paper.tex
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_3/paper.tex
@@ -25,6 +25,16 @@
 \begin{abstract}
 Understanding the dynamics of social interactions among members of Congress is crucial for analyzing political relationships and decision-making processes. However, there is limited knowledge about the patterns and factors influencing Twitter interactions among Congress members. This study presents a comprehensive analysis of Twitter interactions among members of the 117th US Congress, examining the role of party affiliation, chamber membership, and state representation. Our dataset, derived from a 4-month period, captures the Twitter activity of a diverse set of Congress members. Through regression analysis, we investigate the relationship between members' attributes and their incoming and outgoing interactions on Twitter. The results reveal intriguing insights into the influence of factors such as party affiliation and state representation on congressional Twitter interactions. While party affiliation shows some relationship with interaction patterns, the influence of state representation is less pronounced. These findings shed light on the social dynamics among members of Congress and underscore the potential of Twitter as a platform for political discourse and networking. However, it is important to note that this analysis focuses solely on Twitter interactions and does not account for offline or other online communication channels. Additionally, the dataset limitations and the inherently networked nature of Twitter should be considered when interpreting the findings. Overall, this research contributes to our understanding of social relationships within Congress and offers valuable insights for policymakers and political scientists studying online political behavior.
 \end{abstract}
+\section*{Introduction}
+
+The rise of social media has notably reshaped political communication, making platforms such as Twitter integral to politicians' efforts to connect with constituents, influence public narratives, and participate in policy discourse \cite{Larsson2014OfCW, Stier2018ElectionCO, Kreiss2018InTO, Enli2013PERSONALIZEDCI}. Twitter provides a digital stage for political actors to communicate directly, making it a powerful tool for public engagement. Despite this potential, comprehending the intricate dynamics and influential factors of Twitter interactions among politicians proves complex, due to the multifaceted nature of political landscapes and the intertwined influences of numerous underlying variables \cite{Hua2020CharacterizingTU}.
+
+Current research on Twitter exchanges among political actors has highlighted intriguing patterns such as dialogue, debate, and dissemination of information \cite{Garimella2018PoliticalDO, Theocharis2020TheDO}. A significant aspect of these studies concerns the possibility of echo chambers - situations where ideas, beliefs, or information are amplified or reinforced through repeated communication within a defined system, potentially contributing to increased polarization \cite{Garimella2017ALA}. However, the tangled relationship between party affiliation, chamber membership, and state representation and their collective influence on Twitter interactions remains under-explored \cite{Chamberlain2021ANA, Valle2021PoliticalIB}.
+
+Addressing this research gap, our study performs a robust analysis of Twitter interactions among members of the 117th US Congress over a period of four months \cite{Hua2020TowardsMA}. Our unique dataset, capturing a broad spectrum of Congressional Twitter activity, offers a substantial basis to dissect the patterns and influential factors at play \cite{Yoon2014StrategiesAT, Hua2020CharacterizingTU, Eady2023ExposureTT}.
+
+Utilizing a quantitative approach, we employed regression analysis to identify key variables driving Twitter behavior among congress members \cite{Taddy2012MeasuringPS}. This enabled us to uncover that while chamber membership exerted considerable influence on incoming interactions, outgoing interactions were affected primarily by state representation. However, party affiliation did not significantly impact Twitter interactions. These results suggest more complex dynamics in the Twitter networks of US Congress members \cite{Chamberlain2021ANA}. Our findings contribute to a more granulated understanding of social interactions among politicians on digital platforms. Further, they provide a valuable foundation from which future research can continue to explore, and political strategists can make informed decisions regarding online political communication.
+
 \section*{Results}
 
 To understand whether different factors influence Twitter interactions within members of the 117th US Congress, we performed a regression analysis on the key attributes. Specifically, we investigated the role of party affiliation, chamber membership, and state representation in predicting the number of incoming and outgoing interactions on Twitter.
@@ -88,6 +98,33 @@ Building upon the analysis of incoming interactions, we next explored whether th
 
 
 In summary, these regression analyses suggest that while party affiliation is not a significant predictor of Twitter interactions among Congressional members, chamber membership influences incoming interactions and state representation impacts outgoing interactions. Nevertheless, the explanatory power of these models is relatively minor, with an R-squared value of 0.01781 for incoming interactions and 0.01491 for outgoing interactions. These modest values suggest the existence of additional elements that were not accounted for in the current model but determine Twitter interactions among Congress members.
+
+\section*{Discussion}
+
+The fusion of politics with social media has caused a seismic shift in political communication, rooting platforms such as Twitter firmly within the strategies of politicians seeking to connect, influence, and discuss \cite{Kreiss2018InTO, Enli2013PERSONALIZEDCI}. Building on a body of work addressing Twitter exchanges among politicians and the potential patterns discerned therein, such as dialogue, debate, and information dissemination \cite{Garimella2018PoliticalDO, Theocharis2020TheDO, Hua2020CharacterizingTU}, this study sought to unpack the multifaceted dynamics and embedded influences coloring Twitter interactions between members of the 117th US Congress.
+
+Taking a data-driven approach over a four-month period presented a unique opportunity to dissect and analyze congressional Twitter communication dynamics. Through regression analysis \cite{Taddy2012MeasuringPS}, we explored how party affiliation, chamber membership, and state representation dictated Twitter interactions. Echoing previous research \cite{Chamberlain2021ANA}, we found that chamber membership significantly affected incoming interactions. More interestingly, our study elucidated the role played by state representation in outgoing interactions, an association not adequately explored in prior literature \cite{Valle2021PoliticalIB}, thus highlighting the need for nuanced comprehension of these factors in political online communication.
+
+Our study, while illuminating, has its limitations. The dataset's temporal span of four months may not capture longitudinal patterns of Twitter interactions among Congress members. Additionally, by focusing exclusively on Twitter, our research potentially overlooks the broader context of online political communication across various platforms. Therefore, subsequent research should consider extending the data collection period and incorporating other social media platforms for a more comprehensive understanding of online political discourse.
+
+Notably, while our study focuses on state representation and chamber membership, it does not delve into other demographic or experiential variables such as age, gender, or duration of congressional tenure. These factors, coupled with others, could significantly influence Twitter communication dynamics, warranting exploration in future research. 
+
+Moreover, our finding that party affiliation did not significantly impact Twitter interactions contrasts with the echo chambers scenarios proposed in other studies \cite{Garimella2017ALA}. This discrepancy in findings underscores the complexity and density of digital political landscapes and the need for meticulous, multifactor analysis to decode them adequately.
+
+In sum, our research provides a granulated exploration of Twitter interactions among members of the 117th US Congress, illuminating the impact of state representation and chamber membership, and demystifying the contribution of party affiliation. As convolutions in digital platforms continue to reshape political communication, our findings offer dynamic insights for policymakers, academicians, and digital strategists navigating the twists and turns of online political exchanges. Furthermore, the novel insights generated on the role of state representation and chamber membership in Congressional Twitter communication can significantly influence strategies to increase political engagement and shape public discourse. Future research, building on these observations while addressing the highlighted limitations, will further enrich our understanding of political communication in the digital age.
+
+\section*{Methods}
+
+\subsection*{Data Source}
+The dataset used in this study consists of Twitter interactions among members of the 117th US Congress. The data collection process involved harvesting Twitter data from both the House and the Senate for a 4-month period, from February 9 to June 9, 2022. The Twitter API was used to collect the data, ensuring a comprehensive representation of Congress members' Twitter activity during this period. Members with fewer than 100 tweets were excluded from the network. The resulting dataset provides a directed graph representing social interactions among Congress members, where each member is characterized by attributes such as Represented State, Political Party, and Chamber.
+
+\subsection*{Data Preprocessing}
+The data preprocessing step involved several key transformations to prepare the dataset for analysis. First, we calculated the counts of state representation by aggregating the 'State' column in the 'congress\_members.csv' file. This information was then used to create a new feature, 'state\_rep\_count', representing the number of representatives from each state. The social network interactions were captured in the 'congress\_edges.dat' file, which was read into a directed graph using the `read\_edgelist` function from the NetworkX package. The in-degree and out-degree of each Congress member were calculated from the graph, representing their incoming and outgoing interactions on Twitter, respectively. These interaction counts were then added as additional features in the member dataset.
+
+\subsection*{Data Analysis}
+To examine the influence of state representation size on Twitter interactions among members of the 117th US Congress, we performed regression analysis using the statsmodels package. We conducted two separate regression analyses, one for incoming interactions (in-degree) and another for outgoing interactions (out-degree). For each analysis, we used the ordinary least squares (OLS) method and constructed linear regression models. The key independent variable in both models was the 'state\_rep\_count', representing the number of representatives from each state. Additionally, we included the party affiliation ('Party\_R') and chamber membership ('Chamber\_Senate') as predictor variables. We utilized the 'in\_interactions' and 'out\_interactions' variables as the dependent variables in the regression models. The resulting regression models provided estimates (Beta) and p-values for each predictor, indicating the strength and significance of the relationships between the independent variables and Twitter interactions.\subsection*{Code Availability}
+
+Custom code used to perform the data preprocessing and analysis, as well as the raw code outputs, are provided in Supplementary Methods.
 
 
 \clearpage
@@ -607,5 +644,9 @@ def split_mapping(abbrs_to_names_and_definitions: AbbrToNameDef):
 \end{table}
 
 \end{Verbatim}
+
+
+\bibliographystyle{unsrt}
+\bibliography{citations}
 
 \end{document}
