--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_1/paper.tex
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_1/paper.tex
@@ -25,6 +25,18 @@
 \begin{abstract}
 The online social interactions among members of the US Congress have become an integral part of contemporary political discourse. Understanding the dynamics of these interactions and their relationship with party affiliation and chamber can provide valuable insights into the functioning of the legislative process, the polarization within the Congress, and the influence of social media on political decision-making. In this study, we present a comprehensive analysis of the Twitter interactions of the 117th US Congress, focusing on the association between party affiliation and social interactions. Our dataset includes a directed graph that maps the social interactions among Congress members, allowing us to analyze the adjacency matrix structure and graph metrics across different party affiliations and chambers. By employing statistical tests, we demonstrate a significant association between party affiliation and Twitter interactions, revealing higher levels of engagement within party lines. Moreover, we investigate the relationship between represented state and Twitter interactions, finding no significant association when accounting for the chamber. These findings contribute to our understanding of political discourse on social media platforms, highlighting the importance of party dynamics in online interactions. While this study is based on a specific timeframe and dataset, further research is needed to explore the generalizability of these findings and to identify strategies for fostering bipartisan communication and collaboration among Congress members.
 \end{abstract}
+\section*{Introduction}
+
+The growing ubiquity of social media platforms such as Twitter has fundamentally reshaped the landscape of political discourse, proving to be a significant tool for politicians to engage directly with constituents and fellow legislators \cite{Muragod2018TheSM, Garimella2018PoliticalDO}. This transition has prompted substantial interest from researchers seeking to decipher the dynamics that underpin politically charged social interactions on these platforms \cite{Hua2020CharacterizingTU, Stier2018ElectionCO, Eady2019HowMP}. Despite the extensive scholarship in this domain, a nuanced understanding of how party affiliation and the representation of specific geographic constituencies shape these interactions within the US Congress remains elusive \cite{Baviera2018InfluenceIT, Luceri2019RedBD, Marder2016AnEO}.
+
+Past studies have primarily focused on the larger political landscape on Twitter and have made significant strides in unraveling widespread political polarization \cite{Garimella2018PoliticalDO, Luceri2019RedBD}. However, these works provide limited insights into the specific dynamics of the Twitter interactions among members of a single legislative body such as the US Congress, where members not only represent their political party but also a specific geographic constituency. Moreover, the impact of their dual representation on their social interactions on Twitter is less understood \cite{Vliet2020TheTP, Barber2016LessIM}. 
+
+This study aims to fill this knowledge gap by utilizing a specially curated dataset that maps Twitter interactions among members of the 117th US Congress into a directed graph structure \cite{McCreadie2013ScalableDE}. This dataset, unlike generic political Twitter data, allows for the detailed analysis of how political and geographical affiliations affect the structure and nature of these interactions. 
+
+Our methodology employs various statistical analysis techniques fit for network data, including a Chi-square test of association and an ANOVA test to scrutinize the roles of party affiliation and geographic representation, respectively, in influencing Twitter interactions \cite{Farine2015ConstructingCA}. The directed graph representation of the interactions is vital in our approach as it unveils the directionality of interactions, shedding light on who initiates the engagements \cite{Gmez2008StatisticalAO}.
+
+Through this approach, our research provides novel insights into the influence of party politics and geographic representation on the social network interactions of the 117th Congress members on Twitter. This study thus adds a vital dimension to our understanding of the interplay between traditional political affiliations, geographical representation, and digital political discourse.
+
 \section*{Results}
 
 Given the importance of digital social interactions in contemporary political discourse, we first sought to understand the extent to which party affiliation influences the Twitter engagement of the 117th US Congress members. To this end, we conducted a chi-square test of association, investigating the relationship between party affiliation and the frequency of Twitter interactions while considering the potential influence of the chamber category (House or Senate). The expected frequencies were used as the benchmark distribution that the actual interactions could be compared to (Table {}\ref{table:chi_sq_party})
@@ -93,6 +105,39 @@ Having established party affiliation as a significant factor, we then sought to 
 Contrary to the party-factor, the represented state appeared to have no significant impact on the number of Twitter interactions (F(53, 421) = 1.06, p-value = 0.366). This high p-value implies that the null hypothesis of no association cannot be rejected, suggesting that, once accounting for party and chamber, the variation in Twitter interactions among congressional members is not significantly influenced by the state they represent.
 
 In summary, our results underscore the importance of party affiliation as a significant factor in shaping the Twitter interactions among members of the 117th US Congress, with more interactions noted within members of the same party. However, the state represented by the members did not significantly impact Twitter interactions, suggesting that online engagement among US Congress members on Twitter is more driven by political ties than geographic considerations.
+
+\section*{Discussion}
+
+This study undertakes an in-depth exploration of the interplay between party affiliation, geographic representation, and Twitter interactions among members of the 117th US Congress \cite{Hua2020CharacterizingTU, Stier2018ElectionCO}. Engaging with constituents and fellow legislators through social media platforms has become cornerstone elements of modern political discourse \cite{Muragod2018TheSM}. Our investigation provides novel insights into these dynamics, specifically examining how party loyalties and geographic considerations shape online interactions among US Congress members.
+
+In our methodology, we transformed the matrix of Twitter interactions into a directed graph structure conducive to extensive statistical analysis \cite{McCreadie2013ScalableDE}. Guided by previous work on 'echo chambers' on social media \cite{Garimella2018PoliticalDO, Luceri2019RedBD}, where individuals are drawn towards engaging with others sharing their political beliefs, we performed Chi-square and ANOVA tests to scrutinize the association between party affiliation and Twitter interactions while controlling for the chamber variable \cite{Farine2015ConstructingCA, Gmez2008StatisticalAO}. 
+
+Our results revealed a significant association between party affiliation and the frequency of Twitter interactions. This finding aligns with previous studies, substantiating the existence of 'echo chambers' within a specific legislative body, providing a more nuanced understanding of digital political discourse \cite{Garimella2018PoliticalDO, Luceri2019RedBD}. On the other hand, our data unveiled that the geographical representation, often considered paramount in politics, has minimal impact on the engagement frequency of US Congress members on Twitter. This result deviates from studies championing the localized nature of politics \cite{Barber2016LessIM, Vliet2020TheTP}, suggesting that in the digital realm, national politics often take precedence over locale-specific issues. 
+
+The present investigation is not without its limitations. The chosen four-month timeframe for data collection might not comprise the broad patterns of Twitter interactions among Congress members. Significant political events or public crises within this period could also potentially skew the observations. Additionally, not incorporating the content analysis of tweets in the current analysis stands as a significant limitation, as the semantic aspects of interactions might offer additional insights into the dynamics of political discourse.
+
+Nevertheless, our study brings forth critical findings with valuable theoretical and practical implications. Democrats engaging more than what was statistically expected and Republicans less so, highlights the importance of party dynamics in today's political discourse on social media platforms \cite{Tucker2018SocialMP}. This understanding disrupts the conventional notion of political dialogue as being chiefly localized, suggesting a pivotal shift towards nationalized political discourses on online platforms. 
+
+In conclusion, our findings underscore the dominance of party affiliations over geographic considerations in shaping Twitter interactions among members of 117th US Congress. Future studies could seek to incorporate a more holistic analysis involving tweet content analysis, analysis over a larger timeframe, and accounting for significant political and societal events. Also, exploring these dynamics across different political and cultural environments internationally could provide comparative insights, extending the discourse on the global implications of digital politics.
+
+\section*{Methods}
+
+\subsection*{Data Source}
+The data used in this study were sourced from two files. The first file, "congress\_members.csv," contains information about the members of the 117th US Congress, including their Twitter handles, represented state, party affiliation, and chamber. The second file, "congress\_edges.dat," provides the Twitter interaction network between the members of the Congress. Each line in the file represents a directed edge from one member to another, indicating a Twitter interaction between them during the specified 4-month data collection period.
+
+\subsection*{Data Preprocessing}
+The data preprocessing was performed using Python programming language. The "congress\_members.csv" file was loaded into a pandas DataFrame, and the "congress\_edges.dat" file was read as a directed graph using the networkx library. The node labels in the graph were relabeled with integers, and the node attributes for party affiliation, represented state, and chamber were added to the graph.
+
+\subsection*{Data Analysis}
+To analyze the relationship between party affiliation and Twitter interactions, we conducted two specific analyses. 
+
+First, we performed a Chi-Square Test of association between political party and Twitter interactions, accounting for chamber. We created a DataFrame from the graph nodes attributes, including party affiliation, chamber, degree, and state. We then calculated the observed frequencies of party and chamber combinations and compared them to the expected frequencies. The Chi-Square statistic and p-value were computed to assess the significance of the association.
+
+Second, we conducted an ANOVA test to examine the association between represented state and the number of Twitter interactions, accounting for chamber. We fitted a linear regression model with the degree as the dependent variable and represented state as the independent variable. The ANOVA test provided insights into the variance explained by the represented state in the Twitter interactions.
+
+Throughout the data analysis, the statistical packages scipy, statsmodels, and pandas were utilized for the relevant statistical tests and calculations. These analyses allowed us to explore the associations and dependencies between party affiliation, represented state, and Twitter interactions among members of the 117th US Congress.\subsection*{Code Availability}
+
+Custom code used to perform the data preprocessing and analysis, as well as the raw code outputs, are provided in Supplementary Methods.
 
 
 \clearpage
@@ -590,5 +635,9 @@ Party &  &  &  &  \\
 \end{table}
 
 \end{Verbatim}
+
+
+\bibliographystyle{unsrt}
+\bibliography{citations}
 
 \end{document}
