--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_2/paper.tex
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_2/paper.tex
@@ -25,6 +25,18 @@
 \begin{abstract}
 Understanding social interactions among politicians is crucial for comprehending political landscapes. However, the analysis of Twitter interactions within the US Congress, particularly in relation to party affiliations and represented states, remains understudied. We address this research gap by presenting a comprehensive analysis of Twitter interactions among members of the 117th US Congress from both the House and the Senate. By employing a directed graph representation, we investigate the structure of the adjacency matrix, graph metrics, and the likelihood of interactions across party affiliations and represented states. Our findings reveal significant distinctions in Twitter interactions among different political parties, highlighting the influence of party affiliation on online interactions. Furthermore, we unveil the influential role of represented states in Twitter interactions, emphasizing the significance of geographical context in political discourse. We demonstrate that party affiliation fundamentally shapes the social network of Congress members and explore the impact of represented states. By contributing to a deeper understanding of the dynamics of online political communication within the US Congress, our research sheds light on the interplay between social media, party affiliations, and represented states. Limitations include the exclusion of members with fewer than 100 tweets, which may introduce certain biases. Overall, our results have important implications for understanding the multidimensional impacts of political and geographical factors on online interactions among politicians.
 \end{abstract}
+\section*{Introduction}
+
+The digitalization of political discourse on social media platforms, particularly Twitter, has immeasurably reshaped traditional methods of political communication \cite{Muragod2018TheSM}. With its unique format and real-time interactions, Twitter has evolved into an essential tool for U.S. Congress members to engage with constituents, peers, and a global audience \cite{Eady2019HowMP}. This platform allows an examination of party affiliations and geographical contexts represented by the states. These aspects potentially affect communication dynamics among the members of Congress, an area yet to be thoroughly examined.
+
+Prior research has shed light on various implications of Twitter in political contexts, such as the scrutiny of political polarization manifested in Twitter networks \cite{Yarchi2020PoliticalPO}, and the exploration of the role of social media in elevating political engagements \cite{Kahne2018ThePS, Stier2018ElectionCO}. Still, the landscape remains less charted concerning the interdependencies between expressed party affiliations, state representation, and their joint influence on Twitter interactions among U.S. Congress members.
+
+Building on this pre-existing knowledge gap, we leverage a comprehensive dataset featuring Twitter interactions from members of the 117th U.S. Congress \cite{Hemphill2013FramingIS, Hua2020TowardsMA}. Our investigation delves into the intricacies of the adjacency matrix structure, graph metrics, punctuated with estimates of interactions stratified across political affiliations and state boundaries. This study strives to provide a comprehensive analysis of the U.S. Congress's digital political discourse \cite{Sun2018ATPDG, Hu2020OpenGB}.
+
+In our methodological approach, we employed a directed graph representation to treat each congress member as a node and each Twitter interaction as an edge. This approach enables the study of patterns in the Twitter communications of Congress members at a macro level, thereby furnishing a network perspective \cite{Yan2014AsymptoticsID, Olejarczyk2017GraphbasedAO}. We further validated our findings using chi-square tests to statistically infer dependencies between categories reflecting the geographical and party affiliations among Congress members \cite{Dong2021EDITSMA}.
+
+Preliminary results reveal nuanced insights into the role of political affiliations and state representation. Specifically, we observed that both these factors significantly influence the Twitter interaction dynamics among the Congress members. Such findings extend our understanding of the multidimensional interaction patterns in online political discourse within the U.S. Congress.
+
 \section*{Results}
 
 We present the findings of our analysis of Twitter interactions among members of the 117th U.S. Congress, which includes a total of 475 Congress members. The analysis aimed to uncover the influence of party affiliation and geographical context on these interactions. 
@@ -80,6 +92,37 @@ Subsequently, we turned our attention to the state-wise engagements among Congre
 In addition to our primary results, we present some related statistics to encapsulate the scale of our dataset. Our graph of Twitter interactions included 475 nodes, each representing a unique Congress member. The graph was directed, with a total of 13,289 edges, symbolising at least one interaction between the respective Congress members over the period of data collection. 
 
 Summarising, our analysis indicates that both party affiliations and represented states considerably influence the Twitter interactions among members of the 117th U.S. Congress. These results lay the groundwork for further investigations into the multidimensional impacts of the political and geographic, shaping online political communication within the U.S. Congress.
+
+\section*{Discussion}
+
+Our study embarked on the exploration of Twitter interactions among the 117th U.S. Congress constituency, highlighting the roles of party affiliations and geographical representations permeating their digital interactions \cite{Sun2018ATPDG, Hu2020OpenGB}. Building upon the foundations of prior work emphasizing Twitter's potency in framing political discourses \cite{Muragod2018TheSM, Stier2018ElectionCO}, we steered the narrative towards the granular delivery of understanding the interplay between party affiliations and geographical contexts in shaping Twitter exchanges among congress members \cite{An2019PoliticalDI}.
+
+We utilized a directed graph representation to encapsulate Congress members' communications network, a method burgeoning an insightful perspective at a macroscopic level \cite{Yan2014AsymptoticsID}. The chi-square tests on party-wise and state-wise interactions indicated a significant association among congress members of the same party and groups representing the same state. This phenomenon mirrors the well-documented concept of echo-chambers, wherein communication patterns often remain intragroup \cite{Barber2016LessIM}.
+
+Our results align with earlier studies that reported political polarization on Twitter \cite{Jiang2020PoliticalPD, Bail2019AssessingTR}. However, where our study breaks new ground is its identification of both political and geographical context as potent forces driving such polarization. We recognized that political affiliations and geographical locations significantly alternate networking structures and patterns of interactions among members of the Congress, reinforcing the echo-chamber effect \cite{Barber2016LessIM, Etta2021NewsCA}.
+
+Nevertheless, the study isn't devoid of constraints. The omission of Congress members with less than 100 tweets, the arbitrary threshold set for data collection, potentially neglects meaningful interactions below our frequency threshold. Such a criterion might have resulted in an underestimated skew towards Congress members with more aggressive tweeting habits. Furthermore, our study, being observational, merely correlates party affiliations and geographical representation with Twitter interactions, bypassing any causal relationships. However, it also opens avenues to causational hypotheses for future studies, such as how specific socio-political events might be influencing these patterns.
+
+In conclusion, this exploration enlightens a nuanced and granular comprehension of the political discourse within the 117th U.S. Congress, implicating both the party affiliations and state representation of the constituent members as considerable influences. These findings underline the intricate web of political communication patterns interwoven throughout Twitter. Future excursions should consider broader timescales, external events, and even longitudinal studies to investigate how patterns over time might be charting the course of political discourses. \cite{Ekstrm2018SocialMP, Farkas2020ImagesPA, Mir2023ExploringTP}.
+
+\section*{Methods}
+
+\subsection*{Data Source}
+The dataset used in this study consists of Twitter interactions among members of the 117th US Congress. The data was collected over a 4-month period from February 9 to June 9, 2022 using the Twitter API. The dataset includes information on Congress members' Twitter handles, represented state, political party, and chamber. The Twitter handles were obtained from the official data source provided by the House Press Gallery. The dataset was structured as a directed graph, where each node represents a Congress member, and each edge represents a Twitter interaction between two members.
+
+\subsection*{Data Preprocessing}
+The data preprocessing steps were performed using Python programming language. First, the dataset was loaded into a pandas DataFrame. Members with fewer than 100 tweets were excluded from the network. The data was then processed to create a pairwise dataset of state and party information for each Twitter interaction between Congress members.
+
+\subsection*{Data Analysis}
+To analyze the role of regional representation in shaping the retweet network within the 117th US Congress, several analysis steps were performed using Python libraries. The analysis focused on two aspects: party-wise retweet interaction and state-wise retweet interaction.
+
+For the party-wise retweet interaction analysis, a cross-tabulation was conducted to examine the frequency of retweet interactions between different political parties. A chi-square test was then used to determine the statistical significance of the party-wise retweet interactions.
+
+In the state-wise retweet interaction analysis, a cross-tabulation was performed to investigate the frequency of retweet interactions between different states represented by Congress members. A chi-square test was employed to evaluate the significance of the state-wise retweet interactions.
+
+Throughout the analysis, the pandas library was used for data manipulation and the scipy library for the chi-square tests.\subsection*{Code Availability}
+
+Custom code used to perform the data preprocessing and analysis, as well as the raw code outputs, are provided in Supplementary Methods.
 
 
 \clearpage
@@ -614,5 +657,9 @@ def split_mapping(abbrs_to_names_and_definitions: AbbrToNameDef):
 \end{table}
 
 \end{Verbatim}
+
+
+\bibliographystyle{unsrt}
+\bibliography{citations}
 
 \end{document}
