--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_4/paper.tex
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_4/paper.tex
@@ -25,6 +25,16 @@
 \begin{abstract}
 Understanding the patterns and factors influencing Twitter interactions among members of the 117th US Congress is crucial for comprehending information diffusion and political dynamics. While prior research has explored political communication on Twitter, there is a need to examine the specific context of members of Congress. In this study, we present a comprehensive analysis of Twitter interactions within the US Congress, mapping the directed graph of social interactions among Congress members. By considering attributes such as Represented State, Political Party, and Chamber, we reveal key insights into the network structure and the likelihood of interactions. Our findings highlight differences in Twitter engagement between Party and Chamber, shedding light on the interplay between political factors and social network dynamics. Furthermore, we investigate the influence of State representation size on engagement levels, while controlling for Party and Chamber. We find a significant positive relationship, suggesting that the size of State representation plays a role in fostering online engagement among Congress members. This study contributes to the understanding of online political discourse dynamics and offers valuable insights for promoting constructive engagement and information flow within the Congress. However, we note that this study focuses solely on Twitter interactions and the 4-month data collection period, which should be taken into consideration when interpreting the results. 
 \end{abstract}
+\section*{Introduction}
+
+Twitter has become an integral platform for political communication processes, particularly among members of the U.S. Congress \cite{Aragn2013CommunicationDI, Huberman2008SocialNT, Carlisle2013IsSM, Theocharis2020TheDO, Hemphill2013WhatsCD, Straus2013CommunicatingI1}. Through Twitter, Congress members disseminate political information, engage in discussions, and interact with fellow members and constituents. While previous work has investigated patterns of incivility, polarization, and campaign strategies on Twitter \cite{Theocharis2020TheDO, Garca2015IdeologicalAT, Hua2020CharacterizingTU, Bail2019AssessingTR}, less is known about the specific dynamics and factors influencing interactions among members of the U.S. Congress. This critical gap in our understanding of online political discourse dynamics calls for in-depth investigation beyond party lines to include factors such as Represented State and Chamber.
+
+This study addresses this research gap by analyzing the Twitter interactions among members of the 117th U.S. Congress over a four-month period. Our data comprise a directed graph of social interactions among Congress members, each characterized by their Represented State, Political Party, and Chamber \cite{Theocharis2020TheDO, Hua2020CharacterizingTU, Badawy2018WhoFF, Glassman2013SocialNA}. Expanding upon prior studies that explored the role of party lines on Twitter interactions \cite{Chamberlain2021ANA, Valle2021PoliticalIB, Aragn2013CommunicationDI, Theocharis2020TheDO, Hua2020CharacterizingTU}, our study provides a more holistic understanding by examining the interactions across attributes of Party, Chamber, and size of States represented.
+
+To investigate these three factors' influence on Twitter interactions, we employed a mixture of descriptive statistics and regression analysis \cite{Perry2018EgocentricNA, Benton2016LearningME, Himelboim2017ClassifyingTT}. This methodological framework allows us to identify key patterns of Twitter engagements and construct a robust model capturing the influences of Party, Chamber, and State sizes on these interactions. By analyzing the influence of these factors, we provide unique insights into how various aspects of political representation shape online engagement.
+
+Our analysis reveals nuanced differences in Twitter engagement across Parties and Chambers of Congress members. Furthermore, our findings attest to the significant role of State representation size in influencing the level of Twitter interactions among Congress members \cite{Kwak2010WhatIT}. These insights pave the way for a more sophisticated understanding of the intricate dynamics of online political discourse among U.S. Congress members, raising further questions on the interplay between these factors and their impact on broader political communication dynamics. This richly layered analysis provides a foundation upon which to explore additional factors influencing Congress members' Twitter interactions, underscoring this study's relevance for future research in the field.
+
 \section*{Results}
 
 In this section, we present the results of our analysis on the Twitter interactions among members of the 117th US Congress. Understanding the patterns of Twitter interactions and the factors influencing them among Congress members is crucial for comprehending information diffusion and political dynamics in the online space.
@@ -97,6 +107,47 @@ We then investigated the influence of state representation size on Twitter inter
 
 
 In summary, our analysis provides insights into the Twitter interactions among members of the 117th US Congress. We observed differences in engagement counts between Democrats and Republicans, as well as between the House and the Senate. Importantly, we found that the size of state representation influences the level of Twitter interactions among Congress members, supporting the notion that representation size plays a role in shaping online engagement. These findings contribute to our understanding of the complex interplay between political factors and social network dynamics. Further research is needed to explore the underlying mechanisms and dynamics driving these patterns, as well as to consider additional factors that may impact Twitter interactions within Congress.
+
+\section*{Discussion}
+
+This study embarked on a deep exploration aimed at understanding the dynamics of Twitter interactions among the members of the 117th US Congress. Adding to existing knowledge of political communication on Twitter \cite{Aragn2013CommunicationDI, Theocharis2020TheDO, Hemphill2013WhatsCD, Straus2013CommunicatingI1}, we sought to offer more holistic insights by incorporating the nuanced influences of not just Party and Chamber, but also the size of the Represented State - a facet relatively less examined \cite{Chamberlain2021ANA, Valle2021PoliticalIB}.
+
+Our methodology entailed constructing a directed graph representing Twitter interactions among Congress members over four months, which were then analysed using a blend of descriptive statistics and regression models. Unlike preceding studies that have largely focused on party-centric engagements \cite{Aragn2013CommunicationDI, Chamberlain2021ANA, Valle2021PoliticalIB}, our principal finding has been the significant role played by the size of state representation.
+
+While the conclusions drawn add value to our understanding of political dynamics on Twitter, there are certain limitations. The data spanned only four months, potentially overlooking the intricacies of interactions over the long-term. Further, the analysis failed to differentiate between the types of engagements (such as 'likes', 'retweets', or 'replies'), and ignored the context or content of these interactions. Also, the minimum tweet threshold set for inclusion in the database may have inadvertently excluded less frequent, yet active, Twitter users from the sample.
+
+Our findings have implications for the broader understanding of political dynamics within Congress. The revelation that attributes beyond party lines, such as a state’s representation size, can influence Twitter interactions - thereby indirectly impacting information dissipation and nurturing of political ideas – advocates for a reconsideration of the current understanding of political discourses \cite{Hemphill2013WhatsCD}. It underscores the need for inclusivity of these subtleties when planning social media strategies for political communication, particularly in our current age characterized by digital transformation and polarized political landscapes.
+
+It paves the way for several fascinating avenues for prospective research. Diving into a qualitative analysis of Twitter interactions, including aspects such as sentiment and content, could unearth valuable details about these political discourses. Exploring a diverse range of social media platforms apart from Twitter could offer a broader perspective on these interactions \cite{Borge-Holthoefer2014ContentAN}. Furthermore, integrating the insights drawn from our study with research focusing on the tone and tenor of online political conversations \cite{Rathje2021OutgroupAD} might throw light on how language constructs vary with factors such as the size of state representation, and thereby aid in the development of a comprehensive understanding of online political discourses.
+
+In summary, this study has helped demystify some of the nuances in online political discourse among US Congress members. It has underscored the sensitivity of these discourses to factors beyond party-lines and chambers, such as State representation size, thus broadening the purview of political communication studies, and indicating promising paths for future investigations.
+
+\section*{Methods}
+
+\subsection*{Data Source}
+The data used in this study consists of two files: "congress\_members.csv" and "congress\_edges.dat". The "congress\_members.csv" file provides information about the members of the 117th Congress, including their Twitter handles, Represented State, Party, and Chamber. The "congress\_edges.dat" file represents the interaction network between Congress members on Twitter, with each line containing two integers to indicate a directed edge from one Congress member to another.
+
+\subsection*{Data Preprocessing}
+The data preprocessing steps were performed using Python. First, the "congress\_edges.dat" file was loaded into a networkx graph object to represent the interaction network between Congress members. The "congress\_members.csv" file was also loaded into a pandas DataFrame to store the information about each Congress member.
+
+In order to calculate the engagement count for each Congress member, a dictionary was created to map each node ID to its out-degree in the graph, representing the number of Twitter interactions. This engagement count was then added as a new column in the DataFrame.
+
+To investigate the influence of State representation size on Twitter interactions, a new column was created in the DataFrame to indicate the number of representatives from each State. This was done by counting the occurrences of each State in the "State" column and assigning the count to each corresponding Congress member.
+
+NaN values resulting from the preprocessing steps were dropped from the DataFrame to ensure data integrity.
+
+\subsection*{Data Analysis}
+The analysis of the data was performed using various statistical techniques in Python. 
+
+First, a descriptive statistics table was created to summarize the mean and standard deviation of Twitter interactions of Congress members grouped by Party and Chamber.
+
+Next, a statistical model was fitted to examine the effect of State representation size on Twitter interactions while controlling for Party and Chamber. The model used the engagement count as the dependent variable and included State representation size, Party, and Chamber as independent variables. The statistical model was fitted using the Ordinary Least Squares (OLS) method from the statsmodels library.
+
+The results from the fitted model were used to create a table displaying the coefficients, p-values, and confidence intervals of the independent variables. Additionally, the model's R-squared value was calculated to assess the goodness of fit.
+
+In summary, the data analysis involved descriptive statistics to understand the distribution of Twitter interactions among Congress members, and a regression analysis to examine the influence of State representation size on engagement levels while controlling for Party and Chamber.\subsection*{Code Availability}
+
+Custom code used to perform the data preprocessing and analysis, as well as the raw code outputs, are provided in Supplementary Methods.
 
 
 \clearpage
@@ -602,5 +653,9 @@ Party & Chamber &  &  \\
 \end{table}
 
 \end{Verbatim}
+
+
+\bibliographystyle{unsrt}
+\bibliography{citations}
 
 \end{document}
