--- a/data_to_paper/data_to_paper_examples/examples/projects/diabetes/outputs/paper1301/citations.bib
+++ b/data_to_paper/data_to_paper_examples/examples/projects/diabetes/outputs/paper1301/citations.bib
@@ -5,23 +5,37 @@
 }
 
 
-@Inproceedings{Menard1996AppliedLR,
- author = {S. Menard},
- title = {Applied Logistic Regression Analysis},
- year = {1996}
+@Article{Wahid2016QuantifyingTA,
+ author = {A. Wahid and Nishma Manek and Melanie Nichols and P. Kelly and C. Foster and P. Webster and A. Kaur and C. Friedemann Smith and Elizabeth Wilkins and M. Rayner and N. Roberts and P. Scarborough},
+ booktitle = {Journal of the American Heart Association : Cardiovascular and Cerebrovascular Disease},
+ journal = {Journal of the American Heart Association: Cardiovascular and Cerebrovascular Disease},
+ title = {Quantifying the Association Between Physical Activity and Cardiovascular Disease and Diabetes: A Systematic Review and MetaAnalysis},
+ volume = {5},
+ year = {2016}
 }
 
 
-@Article{Preedy1989BehavioralRF,
- author = {V. Preedy and R. Watson},
- booktitle = {Iowa medicine : journal of the Iowa Medical Society},
- journal = {Iowa medicine : journal of the Iowa Medical Society},
+@Article{Simmons2016EffectOP,
+ author = {D. Simmons and R. Devlieger and A. van Assche and Goele Jans and S. Galjaard and R. Corcoy and J. Adelantado and F. Dunne and G. Desoye and J. Harreiter and A. Kautzky-Willer and P. Damm and E. Mathiesen and D. M. Jensen and L. Andersen and A. Lapolla and M. Dalfr and A. Bertolotto and E. Wender-Oegowska and A. Zawiejska and D. Hill and F. Snoek and J. Jelsma and M. V. van Poppel},
+ booktitle = {Journal of Clinical Endocrinology and Metabolism},
+ journal = {The Journal of clinical endocrinology and metabolism},
  pages = {
-          436, 438
+          903-913
         },
- title = {Behavioral risk factor surveillance system.},
- volume = {79 9},
- year = {1989}
+ title = {Effect of Physical Activity and/or Healthy Eating on GDM Risk: The DALI Lifestyle Study.},
+ volume = {102 3},
+ year = {2016}
+}
+
+
+@Article{Pierannunzi2013ASR,
+ author = {Carol Pierannunzi and S. Hu and L. Balluz},
+ booktitle = {BMC Medical Research Methodology},
+ journal = {BMC Medical Research Methodology},
+ pages = {49 - 49},
+ title = {A systematic review of publications assessing reliability and validity of the Behavioral Risk Factor Surveillance System (BRFSS), 20042011},
+ volume = {13},
+ year = {2013}
 }
 
 
@@ -36,14 +50,48 @@
 }
 
 
-@Article{Wild2006RiskFF,
- author = {S. Wild and C. Byrne},
- booktitle = {British medical journal},
- journal = {BMJ : British Medical Journal},
- pages = {1009 - 1011},
- title = {Risk factors for diabetes and coronary heart disease},
- volume = {333},
- year = {2006}
+@Article{Nelson2001ReliabilityAV,
+ author = {D. Nelson and D. Holtzman and Julie Bolen and C. Stanwyck and K. Mack},
+ booktitle = {Sozial- und Prventivmedizin},
+ journal = {Sozial- und Praventivmedizin},
+ pages = {
+          S3-42
+        },
+ title = {Reliability and validity of measures from the Behavioral Risk Factor Surveillance System (BRFSS).},
+ volume = {46 Suppl 1},
+ year = {2001}
+}
+
+
+@Article{Boruvka2016AssessingTC,
+ author = {A. Boruvka and D. Almirall and K. Witkiewitz and S. Murphy},
+ booktitle = {Journal of the American Statistical Association},
+ journal = {Journal of the American Statistical Association},
+ pages = {1112 - 1121},
+ title = {Assessing Time-Varying Causal Effect Moderation in Mobile Health},
+ volume = {113},
+ year = {2016}
+}
+
+
+@Article{Paradies2015RacismAA,
+ author = {Y. Paradies and J. Ben and N. Denson and A. Elias and N. Priest and Alex L. Pieterse and Arpana Gupta and M. Kelaher and G. Gee},
+ booktitle = {PLoS ONE},
+ journal = {PLoS ONE},
+ title = {Racism as a Determinant of Health: A Systematic Review and Meta-Analysis},
+ volume = {10},
+ year = {2015}
+}
+
+
+@Article{Mora2007PhysicalAA,
+ author = {S. Mora and N. Cook and J. Buring and P. Ridker and I. Lee},
+ booktitle = {Circulation},
+ journal = {Circulation},
+ pages = {2110-2118},
+ title = {Physical Activity and Reduced Risk of Cardiovascular Events: Potential Mediating Mechanisms},
+ volume = {116},
+ year = {2007}
 }
 
 
@@ -55,17 +103,6 @@
  title = {Physical Activity Levels and Diabetes Prevalence in US Adults: Findings from NHANES 20152016},
  volume = {11},
  year = {2020}
-}
-
-
-@Article{Eckert2012ImpactOP,
- author = {K. Eckert},
- booktitle = {Diabetes, Metabolic Syndrome and Obesity : Targets and Therapy},
- journal = {Diabetes, Metabolic Syndrome and Obesity: Targets and Therapy},
- pages = {303 - 311},
- title = {Impact of physical activity and bodyweight on health-related quality of life in people with type 2 diabetes},
- volume = {5},
- year = {2012}
 }
 
 
@@ -82,46 +119,23 @@
 }
 
 
-@Article{Fox1999TheIO,
- author = {K. Fox},
- booktitle = {Public Health Nutrition},
- journal = {Public Health Nutrition},
- pages = {411 - 418},
- title = {The influence of physical activity on mental well-being},
+@Article{Churilla2008PhysicalAP,
+ author = {J. Churilla and R. Zoeller},
+ journal = {American Journal of Lifestyle Medicine},
+ pages = {118 - 125},
+ title = {Physical Activity: Physical Activity and the Metabolic Syndrome: A Review of the Evidence},
  volume = {2},
- year = {1999}
+ year = {2008}
 }
 
 
-@Article{Chan1994ObesityFD,
- author = {J. Chan and E. Rimm and G. Colditz and M. Stampfer and W. Willett},
- booktitle = {Diabetes Care},
- journal = {Diabetes Care},
- pages = {961 - 969},
- title = {Obesity, Fat Distribution, and Weight Gain as Risk Factors for Clinical Diabetes in Men},
- volume = {17},
- year = {1994}
-}
-
-
-@Article{Singh2013TheAQ,
- author = {Gitanjali M Singh and G. Danaei and F. Farzadfar and G. Stevens and M. Woodward and D. Wormser and S. Kaptoge and G. Whitlock and Q. Qiao and S. Lewington and E. Di Angelantonio and S. Vander Hoorn and C. Lawes and Mohammed K. Ali and D. Mozaffarian and M. Ezzati},
+@Article{Mayega2013DiabetesAP,
+ author = {R. Mayega and D. Guwatudde and F. Makumbi and F. Nakwagala and S. Peterson and G. Tomson and C. Ostenson},
  booktitle = {PLoS ONE},
  journal = {PLoS ONE},
- title = {The Age-Specific Quantitative Effects of Metabolic Risk Factors on Cardiovascular Diseases and Diabetes: A Pooled Analysis},
+ title = {Diabetes and Pre-Diabetes among Persons Aged 35 to 60 Years in Eastern Uganda: Prevalence and Associated Factors},
  volume = {8},
  year = {2013}
-}
-
-
-@Article{Pi-Sunyer2007ReductionIW,
- author = {X. Pi-Sunyer and G. Blackburn and F. Brancati and G. Bray and R. Bright and J. Clark and J. M. Curtis and M. Espeland and J. Foreyt and Kathryn Graves and S. Haffner and B. Harrison and James O Hill and E. Horton and J. Jakicic and R. Jeffery and K. Johnson and S. Kahn and D. Kelley and A. Kitabchi and W. Knowler and C. Lewis and B. J. Maschak-Carey and B. Montgomery and D. Nathan and Jennifer Patricio and A. Peters and J. Redmon and R. Reeves and D. Ryan and M. Safford and B. van Dorsten and T. Wadden and L. Wagenknecht and Jacqueline Wesche-Thobaben and R. Wing and S. Yanovski},
- booktitle = {Diabetes Care},
- journal = {Diabetes Care},
- pages = {1374 - 1383},
- title = {Reduction in Weight and Cardiovascular Disease Risk Factors in Individuals With Type 2 Diabetes},
- volume = {30},
- year = {2007}
 }
 
 
@@ -135,12 +149,73 @@
 }
 
 
-@Article{Lam2012TheWD,
- author = {David W Lam and D. Leroith},
- booktitle = {Current Opinion in Endocrinology, Diabetes \& Obesity},
- journal = {Current Opinion in Endocrinology \& Diabetes and Obesity},
- pages = {9396},
- title = {The worldwide diabetes epidemic},
- volume = {19},
+@Article{Wu2014RiskFC,
+ author = {Yanling Wu and Y. Ding and Yoshimasa Tanaka and Wen Zhang},
+ booktitle = {International Journal of Medical Sciences},
+ journal = {International Journal of Medical Sciences},
+ pages = {1185 - 1200},
+ title = {Risk Factors Contributing to Type 2 Diabetes and Recent Advances in the Treatment and Prevention},
+ volume = {11},
+ year = {2014}
+}
+
+
+@Article{Kaizu2014ImpactOL,
+ author = {Shinako Kaizu and H. Kishimoto and M. Iwase and H. Fujii and T. Ohkuma and Hitoshi Ide and T. Jodai and Y. Kikuchi and Yasuhiro Idewaki and Y. Hirakawa and Udai Nakamura and T. Kitazono},
+ booktitle = {PLoS ONE},
+ journal = {PLoS ONE},
+ title = {Impact of Leisure-Time Physical Activity on Glycemic Control and Cardiovascular Risk Factors in Japanese Patients with Type 2 Diabetes Mellitus: The Fukuoka Diabetes Registry},
+ volume = {9},
+ year = {2014}
+}
+
+
+@Article{Mao2022PhysicalAR,
+ author = {W. Mao and Lei Zhang and Si Sun and Jianping Wu and X. Zou and Guangyuan Zhang and Ming Chen},
+ booktitle = {Frontiers in Public Health},
+ journal = {Frontiers in Public Health},
+ title = {Physical Activity Reduces the Effect of High Body Mass Index on Kidney Stones in Diabetes Participants From the 20072018 NHANES Cycles: A Cross-Sectional Study},
+ volume = {10},
+ year = {2022}
+}
+
+
+@Article{Aldossari2018PrevalenceOP,
+ author = {K. Aldossari and Abdulrahman Aldiab and Jamaan Alzahrani and S. Al-Ghamdi and M. Abdelrazik and M. Batais and Sundas Javad and S. Nooruddin and H. Razzak and A. El-Metwally},
+ booktitle = {Journal of Diabetes Research},
+ journal = {Journal of Diabetes Research},
+ title = {Prevalence of Prediabetes, Diabetes, and Its Associated Risk Factors among Males in Saudi Arabia: A Population-Based Survey},
+ volume = {2018},
+ year = {2018}
+}
+
+
+@Article{Rask-Andersen2017GeneenvironmentIS,
+ author = {M. Rask-Andersen and T. Karlsson and W. Ek and . Johansson},
+ booktitle = {PLoS Genetics},
+ journal = {PLoS Genetics},
+ title = {Gene-environment interaction study for BMI reveals interactions between genetic factors and physical activity, alcohol consumption and socioeconomic status},
+ volume = {13},
+ year = {2017}
+}
+
+
+@Article{Peer2012RisingDP,
+ author = {N. Peer and K. Steyn and C. Lombard and E. Lambert and B. Vythilingum and N. Levitt},
+ booktitle = {PLoS ONE},
+ journal = {PLoS ONE},
+ title = {Rising Diabetes Prevalence among Urban-Dwelling Black South Africans},
+ volume = {7},
  year = {2012}
+}
+
+
+@Article{Casagrande2013ThePO,
+ author = {Sarah Stark Casagrande and J. Fradkin and S. Saydah and Keith F. Rust and C. Cowie},
+ booktitle = {Diabetes Care},
+ journal = {Diabetes Care},
+ pages = {2271 - 2279},
+ title = {The Prevalence of Meeting A1C, Blood Pressure, and LDL Goals Among People With Diabetes, 19882010},
+ volume = {36},
+ year = {2013}
 }
